--- a/templates/season_results/_qualifications_classification.html.twig
+++ b/templates/season_results/_qualifications_classification.html.twig
@@ -11,10 +11,10 @@
             </thead>
             <tbody>
                 {% for result in classification %}
-                    <tr class={{ result.driver == season.driver ? 'highlight-driver'}}>
+                    <tr class={{ result.driver == currentDriverSeason.season.driver ? 'highlight-driver'}}>
                         <td>{{ result.position }}</td>
-                        {% if result.driver == season.driver %}
-                            <td>{{ season.user.username }}</td>
+                        {% if result.driver == currentDriverSeason.season.driver %}
+                            <td>{{ currentDriverSeason.season.user.username }}</td>
                         {% else %}
                             <td>{{ result.driver.name }} {{ result.driver.surname }}</td>
                         {% endif %}
