--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -61,7 +61,7 @@
                     {% endif %}
                 </div>
                 <div class="card mt-5 mb-2">
-                    {% if currentDriverSeason.currentTrack %}
+                    {% if currentDriverSeason and currentDriverSeason.currentTrack %}
                         <div class="card-header"> 
                             <h4>Kolejny wyścig</h4> 
                         </div>
@@ -86,7 +86,7 @@
                             <div>
                                 <a class="custom-dropdown" data-target="div-for-race-results-anchors">#Wyniki Wyścigów <i class="fas fa-arrow-down ml-1" data-destiny="races"></i></a>
                                 <div class="div-for-classification-results-anchors" id="div-for-race-results-anchors">
-                                    {% if currentDriverSeason.season and currentDriverSeason.season.races|length != 0 %}
+                                    {% if currentDriverSeason and currentDriverSeason.season.races|length != 0 %}
                                         {% for race in currentDriverSeason.season.races %}
                                             <a href="{{ path('app_index' , {'classificationType' : 'RACE', 'race_id' : race.id}) }}">
                                                 {{ race.getTrack().getName() }}
@@ -100,7 +100,7 @@
                             <div>
                                 <a class="custom-dropdown" data-target="div-for-qualifications-results-anchors">#Wyniki kwalifikacji <i class="fas fa-arrow-down ml-1" data-destiny="qualifications"></i></a>
                                 <div class="div-for-classification-results-anchors" id="div-for-qualifications-results-anchors">
-                                    {% if currentDriverSeason.season and currentDriverSeason.season.races|length != 0 %}
+                                    {% if currentDriverSeason and currentDriverSeason.season.races|length != 0 %}
                                         {% for race in currentDriverSeason.season.races %}
                                             <a href="{{ path('app_index' , {'classificationType' : 'QUALIFICATIONS', 'race_id' : race.id}) }}">
                                                 {{ race.track.name }}
@@ -130,7 +130,7 @@
                                 <div class="card-body">
                                     {% include 'season_results/_classification.html.twig' %}
                                 </div>
-                            {% else %}
+                            {% elseif classificationType == enum('App\\Service\\Classification\\ClassificationType').QUALIFICATIONS %}
                                 <div class="card-header">
                                     <h4 class="text-center">Wyniki kwalifikacji - {{ raceName ? raceName : season.races[0].track.name }} </h4>
                                 </div>
