--- a/templates/season_results/_classification.html.twig
+++ b/templates/season_results/_classification.html.twig
@@ -11,21 +11,36 @@
                 </tr>
             </thead>
             <tbody>
-                {% for driver in currentDriverSeason.classification %}
-                    <tr class={{ currentDriverSeason.season and currentDriverSeason.season.driver == driver ? 'highlight-driver'}}>
-                        <td>{{ driver.position }}</td>
+                {% if currentDriverSeason %}
+                    {% for driver in currentDriverSeason.classification %}
+                        <tr class={{ currentDriverSeason.season and currentDriverSeason.season.driver == driver ? 'highlight-driver'}}>
+                            <td>{{ driver.position }}</td>
 
-                        {% if currentDriverSeason.season and currentDriverSeason.season.driver == driver %}
-                            <td>{{ currentDriverSeason.season.user.username }}</td>
-                        {% else %}
-                            <td>{{ driver.name }} {{ driver.surname }}</td>
-                        {% endif %}
-                        
-                        <td>{{ driver.team.name }}</td>
-                        <td><img alt="{{ driver.team.name }}-car" class="f1-car-picture" src="/assets/cars/{{driver.team.picture}}"/></td>
-                        <td> {{ driver.points }} </td>
-                    </tr>
-                {% endfor %}
+                            {% if currentDriverSeason.season and currentDriverSeason.season.driver == driver %}
+                                <td>{{ currentDriverSeason.season.user.username }}</td>
+                            {% else %}
+                                <td>{{ driver.fullName }}</td>
+                            {% endif %}
+
+                            <td>{{ driver.team.name }}</td>
+                            <td><img alt="{{ driver.team.name }}-car" class="f1-car-picture" src="{{ asset('/assets/cars/'~driver.team.picture) }}"/></td>
+                            <td> {{ driver.points }} </td>
+                        </tr>
+                    {% endfor %}
+                {% elseif defaultDriversClassification %}
+                    {% for driverRaceResult in defaultDriversClassification.driversRaceResults %}
+                        <tr>
+                            <td>{{ driverRaceResult.position }}</td>
+                            <td>{{ driverRaceResult.driver.fullName }}</td>
+                            <td>{{ driverRaceResult.driver.team.name }}</td>
+                            <td>
+                                <img alt="{{ driverRaceResult.driver.team.name }}-car" class="f1-car-picture"
+                                     src="{{ asset('/assets/cars/'~driverRaceResult.driver.team.picture) }}"/>
+                            </td>
+                            <td> {{ driverRaceResult.points }} </td>
+                        </tr>
+                    {% endfor %}
+                {% endif %}
             </tbody>
         </table>
     </div>
