--- a/templates/season_results/_qualifications_classification.html.twig
+++ b/templates/season_results/_qualifications_classification.html.twig
@@ -10,13 +10,13 @@
                 </tr>
             </thead>
             <tbody>
-                {% for result in classification %}
+                {% for result in currentDriverSeason.classification %}
                     <tr class={{ result.driver == currentDriverSeason.season.driver ? 'highlight-driver'}}>
                         <td>{{ result.position }}</td>
                         {% if result.driver == currentDriverSeason.season.driver %}
                             <td>{{ currentDriverSeason.season.user.username }}</td>
                         {% else %}
-                            <td>{{ result.driver.name }} {{ result.driver.surname }}</td>
+                            <td>{{ result.driver.fullName }}</td>
                         {% endif %}
                         <td>{{ result.driver.team.name }}</td>
                         <td>
