--- a/templates/league/show_league.html.twig
+++ b/templates/league/show_league.html.twig
@@ -26,15 +26,15 @@
                             <div class="row">
                                 <div class="col gold-medal mb-1">
                                     <i class="fa-solid fa-medal fa-3x"></i><br>
-                                        <span>{{ player.podiums[1] }}</span>
+                                        <span>{{ player.driverPodiumsDTO.firstPlacePodiums }}</span>
                                 </div>
                                 <div class="col silver-medal mb-1">
                                     <i class="fa-solid fa-medal fa-3x"></i><br>
-                                        <span>{{ player.podiums[2] }}</span>
+                                        <span>{{ player.driverPodiumsDTO.secondPlacePodiums }}</span>
                                 </div>
                                 <div class="col bronze-medal mb-1">
                                     <i class="fa-solid fa-medal fa-3x"></i><br>
-                                    <span>{{ player.podiums[3] }}</span>
+                                    <span>{{ player.driverPodiumsDTO.thirdPlacePodiums }}</span>
                                 </div>
                             </div>
                         </div>
