--- a/templates/driver/show.html.twig
+++ b/templates/driver/show.html.twig
@@ -25,8 +25,8 @@
                                 <td>{{ driver.surname }}</td>
                             </tr>
                             <tr>
-                                <th>Car_id</th>
-                                <td>{{ driver.carId }}</td>
+                                <th>Car Number</th>
+                                <td>{{ driver.carNumber }}</td>
                             </tr>
                         </tbody>
                     </table>
