--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -33,7 +33,7 @@
                         <div class="card-body flow-text">
                             <span>Kierowca: {{ currentDriverSeason.season.user.username }} </span><br>
                             <span>Zespół: {{ currentDriverSeason.season.driver.team.name }}</span><br>
-                            <span>Numer samochodu: {{ currentDriverSeason.season.driver.carId }}</span><br>
+                            <span>Numer samochodu: {{ currentDriverSeason.season.driver.carNumber }}</span><br>
                             <span>Rozegrane wyścigi: {{ currentDriverSeason.season.races|length }} / {{ currentDriverSeason.numberOfRaces }}</span><br>
                             <span>Zdobyte punkty: {{ currentDriverSeason.driverPoints }} </span><br>
 
