--- a/templates/league/show_league.html.twig
+++ b/templates/league/show_league.html.twig
@@ -71,7 +71,7 @@
                                 <div class="div-for-classification-results-anchors" id="div-for-race-results-anchors">
                                     {% if league.getRaces()|length != 0 %}
                                         {% for race in league.getRaces() %}
-                                            <a href="{{ path('multiplayer_show_season' , {'id' : league.getId(), 'classificationType' : 'race', 'race_id' : race.id}) }}">
+                                            <a href="{{ path('multiplayer_show_season' , {'id' : league.getId(), 'classificationType' : 'RACE', 'race_id' : race.id}) }}">
                                                 {{ race.getTrack().getName() }}
                                             </a>
                                         {% endfor %}
@@ -85,7 +85,7 @@
                                 <div class="div-for-classification-results-anchors" id="div-for-qualifications-results-anchors">
                                     {% if league.getRaces()|length != 0 %}
                                         {% for race in league.getRaces() %}
-                                            <a href="{{ path('multiplayer_show_season' , {'id' : league.getId(), 'classificationType' : 'qualifications', 'race_id' : race.id}) }}">
+                                            <a href="{{ path('multiplayer_show_season' , {'id' : league.getId(), 'classificationType' : 'QUALIFICATIONS', 'race_id' : race.id}) }}">
                                                 {{ race.getTrack().getName() }}
                                             </a>
                                         {% endfor %}
@@ -95,7 +95,7 @@
                                 </div>
                             </div>
                             <div>
-                                <a href="{{ path('multiplayer_show_season' , {'id' : league.getId(), 'classificationType' : 'players'}) }}">#Klasyfikacja kierowców</a>
+                                <a href="{{ path('multiplayer_show_season' , {'id' : league.getId(), 'classificationType' : 'PLAYERS'}) }}">#Klasyfikacja kierowców</a>
                             </div>
                         </div>
                         <div class="midlle-section-dropdown-content">
@@ -103,14 +103,14 @@
                             
                         </div>
                         <div class="card mt-3 mb-2">
-                            {% if classificationType == 'players' %}
+                            {% if classificationType == enum('App\\Service\\Classification\\ClassificationType').PLAYERS %}
                                 <div class="card-header">
                                     <h4 class="text-center">Klasyfikacja kierowców</h4>
                                 </div>
                                 <div class="card-body">
                                     {% include 'league_results/_players_classification.html.twig' %}
                                 </div>
-                            {% elseif classificationType == 'race' %}
+                            {% elseif classificationType == enum('App\\Service\\Classification\\ClassificationType').RACE %}
                                 <div class="card-header">
                                     <h4 class="text-center">Klasyfikacja {{ classification ? classification.getOwner().getTrack().getName() }}</h4>
                                 </div>
