Refactoring of LeagueClassifications

--- a/templates/league/show_league.html.twig
+++ b/templates/league/show_league.html.twig
@@ -117,7 +117,7 @@
                                 <div class="card-body">
                                     {% include 'league_results/_race_classification.html.twig' %}
                                 </div>
-                            {% else %}
+                            {% elseif classificationType == enum('App\\Service\\Classification\\ClassificationType').QUALIFICATIONS %}
                                 <div class="card-header">
                                     <h4 class="text-center">Wyniki kwalifikacji - {{ classification ? classification.getOwner().getTrack().getName() }}</h4>
                                 </div>
