--- a/templates/league_results/_race_classification.html.twig
+++ b/templates/league_results/_race_classification.html.twig
@@ -11,9 +11,9 @@
                 </tr>
             </thead>
             <tbody>
-                {% for i, result in classification %} 
+                {% for result in classification %}
                     <tr>
-                        <td>{{ i + 1 }}</td>
+                        <td>{{ result.position }}</td>
                         <td>{{ result.player.user.username }}</td>
                         <td>{{ result.player.driver.team.name }}</td>
                         <td><img class="f1-car-picture" src="/assets/cars/{{ result.player.driver.team.picture }}" /></td>
