Add more profound test for home page

--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -42,15 +42,15 @@
                                 <div class="row">
                                     <div class="col gold-medal mb-1">
                                         <i class="fa-solid fa-medal fa-3x"></i><br>
-                                        <span>{{ currentDriverSeason.driverPodiums.firstPlacePodiums }}</span>
+                                        <span id="first-place-podiums-count">{{ currentDriverSeason.driverPodiums.firstPlacePodiums }}</span>
                                     </div>
                                     <div class="col silver-medal mb-1">
                                         <i class="fa-solid fa-medal fa-3x"></i><br>
-                                        <span>{{ currentDriverSeason.driverPodiums.secondPlacePodiums }}</span>
+                                        <span id="second-place-podiums-count">{{ currentDriverSeason.driverPodiums.secondPlacePodiums }}</span>
                                     </div>
                                     <div class="col bronze-medal mb-1">
                                         <i class="fa-solid fa-medal fa-3x"></i><br>
-                                        <span>{{ currentDriverSeason.driverPodiums.thirdPlacePodiums }}</span>
+                                        <span id="third-place-podiums-count">{{ currentDriverSeason.driverPodiums.thirdPlacePodiums }}</span>
                                     </div>
                                 </div>
                             </div>
