--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -32,7 +32,9 @@
                                         'placeholder': 'Wprowadź nazwę użytkownika'
                                     }
                                 }) }}
-                                {{ form_errors(registrationForm.username) }}
+                                <div class="form-error text-sm mt-2">
+                                    {{ form_errors(registrationForm.username) }}
+                                </div>
                             </div>
 
                             <div class="form-group">
@@ -45,7 +47,9 @@
                                         'placeholder': 'Wprowadź adres email'
                                     }
                                 }) }}
-                                {{ form_errors(registrationForm.email) }}
+                                <div class="form-error text-sm mt-2">
+                                    {{ form_errors(registrationForm.email) }}
+                                </div>
                             </div>
 
                             <div class="form-group">
@@ -58,7 +62,9 @@
                                         'placeholder': 'Wprowadź hasło (minimum 6 znaków)'
                                     }
                                 }) }}
-                                {{ form_errors(registrationForm.plainPassword) }}
+                                <div class="form-error text-sm mt-2">
+                                    {{ form_errors(registrationForm.plainPassword) }}
+                                </div>
                             </div>
 
                             <button type="submit" class="btn btn-register">
