Remove unused css

--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -21,7 +21,7 @@
                         </div>
 
                         <div class="form-container">
-                            {{ form_start(registrationForm, {'attr': {'novalidate': 'novalidate'}}) }}
+                            {{ form_start(registrationForm) }}
                             <div class="form-group">
                                 <label class="form-label" for="{{ registrationForm.username.vars.id }}">
                                     <i class="fas fa-user"></i> Nazwa użytkownika
