Refactor login page to new auth layout

--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -10,7 +10,7 @@
 {% block body %}
     <div class="registration-container">
         <div class="container">
-            <div class="row justify-content-center align-items-center" style="min-height: 100vh;">
+            <div class="row justify-content-center align-items-center">
                 <div class="col-lg-6 col-md-8 col-sm-10">
                     <div class="registration-card">
                         <div class="registration-header">
